--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@stripe/stripe-js": "^1.53.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.9",
+        "@vee-validate/nuxt": "^4.9.5",
         "@vueuse/core": "^10.1.2",
         "nuxt-lodash": "^2.4.1",
         "path": "^0.12.7",
