--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "path": "^0.12.7",
         "pinia": "^2.1.3",
         "prisma": "^4.14.1",
-        "stripe": "^12.5.0"
+        "stripe": "^12.5.0",
+        "yup": "^1.2.0"
     }
 }
