--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "nuxt": "^3.5.0",
         "prettier": "^2.7.1",
         "typescript": "^5.0.4",
+        "vue-stripe-js": "^1.0.1",
         "vue-tsc": "^1.6.5"
     },
     "dependencies": {
@@ -38,6 +39,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.9",
         "@vee-validate/nuxt": "^4.9.5",
+        "@vee-validate/yup": "^4.9.5",
         "@vueuse/core": "^10.1.2",
         "nuxt-lodash": "^2.4.1",
         "path": "^0.12.7",
